--- a/packages/admin-dashboard/src/locales/en/table.json
+++ b/packages/admin-dashboard/src/locales/en/table.json
@@ -102,7 +102,10 @@
     "featuredAsset": "Asset",
     "name": "Name",
     "slug": "Slug",
-    "enabled": "Enabled"
+    "enabled": "Enabled",
+    "sku": "SKU",
+    "price": "Price",
+    "priceWithTax": "Price with tax"
   },
   "actionsMenu": {
     "title": "Actions",
