--- a/packages/admin-dashboard/src/locales/pl/assets.json
+++ b/packages/admin-dashboard/src/locales/pl/assets.json
@@ -1,24 +1,24 @@
 {
-  "assetDetails": "Szczegóły zasobu",
-  "close": "Zakmnij",
-  "delete": "Usuń",
-  "edit": "Edytuj",
-  "deleteSuccess": "Zasób został usunięty",
-  "deleteFail": "Zasób nie został usunięty",
-  "editSuccess": "Zasób został zmieniony",
-  "editFail": "Zasób nie został zmieniony",
-  "createFailed": "Błąd przy tworzeniu zasobu",
-  "createSuccess": "Utworzono zasób ",
-  "dropzone": "Przeciągnij tutaj plik",
-  "filesSelected": " wybranych plików",
-  "noFilesSelected": "Brak zaznaczonych plików",
-  "invalidFileTypes": "Nieprawidłowe typy plików",
-  "detailsTable": {
-    "id": "Id",
-    "name": "Nazwa",
-    "fileSize": "Rozmiar pliku",
-    "createdAt": "Utworzono",
-    "size": "Rozmiar",
-    "source": "Ścieżka"
-  }
+    "assetDetails": "Szczegóły dotyczące aktywów",
+    "close": "Zamknij",
+    "delete": "Usuń",
+    "edit": "Edytuj",
+    "deleteSuccess": "Zasób został pomyślnie usunięty",
+    "deleteFail": "Zasób nie został usunięty",
+    "editSuccess": "Zasób został edytowany",
+    "editFail": "Zasób nie był edytowany",
+    "createFailed": "Nie udało się utworzyć zasobu",
+    "createSuccess": "Zasób utworzony",
+    "dropzone": "Upuść plik tutaj lub kliknij, aby go przejrzeć.",
+    "filesSelected": " wybrane pliki",
+    "noFilesSelected": "Nie wybrano żadnych plików",
+    "invalidFileTypes": "Nieprawidłowe typy plików",
+    "detailsTable": {
+        "id": "Id",
+        "name": "Nazwa",
+        "fileSize": "Rozmiar pliku",
+        "createdAt": "Utworzony",
+        "size": "Rozmiar",
+        "source": "Ścieżka"
+    }
 }
