--- a/packages/admin-dashboard/src/locales/pl/dashboard.json
+++ b/packages/admin-dashboard/src/locales/pl/dashboard.json
@@ -1,34 +1,34 @@
 {
-  "metrics": "Wskaźniki",
-  "averageOrderValue": "Średnia wartość zamówienia",
-  "orderCount": "Ilość zamówień",
-  "showAll": "Wszystkie",
-  "orderTotal": "Wartość zamówień",
-  "dataTypes": "Dostępne typy danych",
-  "intervalTypes": "Typ interwału",
-  "selectDataType": "Wybierz typ danych",
-  "selectIntervalType": "Wybierz tryb interwału",
-  "latestOrders": "Ostatnie zamówienia",
-  "ordersSummary": "Podsumowanie zamówień",
-  "payment": "Płatność",
-  "totalOrdersCount": "Całkowita liczba zamówień",
-  "totalOrdersValue": "Całkowita wartość",
-  "today": "Dzisiaj",
-  "yesterday": "Wczoraj",
-  "thisWeek": "W tym tygodniu",
-  "thisMonth": "W tym miesiącu",
-  "thisYear": "W tym roku",
-  "gross": "Brutto",
-  "net": "Netto",
-  "thisWeekInterval": "W tym tygodniu",
-  "weeklyInterval": "Tydzień",
-  "lastWeekInterval": "W zeszłym tygodniu",
-  "thisMonthInterval": "W tym miesiącu",
-  "mothlyInterval": "Miesiąc",
-  "lastMonthInterval": "Ostatni miesiąc",
-  "yearlyInterval": "Rok",
-  "customInterval": "Niestandardowy",
-  "chooseStartDate": "Data początkowa",
-  "chooseEndDate": "Data końcowa",
-  "orderTotalProductsCount": "Całkowita liczba zamówień"
+    "metrics": "Metryki",
+    "averageOrderValue": "Średnia wartość zamówienia",
+    "showAll": "Pokaż wszystko",
+    "orderCount": "Liczba zamówień",
+    "orderTotal": "Suma zamówień",
+    "dataTypes": "Typy danych",
+    "intervalTypes": "Typy interwałowe",
+    "selectDataType": "Wybierz typ danych",
+    "selectIntervalType": "Wybierz typ interwału",
+    "latestOrders": "Ostatnie zamówienia",
+    "ordersSummary": "Podsumowanie zamówień",
+    "payment": "Płatność",
+    "totalOrdersCount": "Łączna liczba zamówień",
+    "totalOrdersValue": "Łączna wartość zamówień",
+    "today": "Dzisiaj",
+    "yesterday": "Wczoraj",
+    "thisWeek": "W tym tygodniu",
+    "thisMonth": "W tym miesiącu",
+    "thisYear": "W tym roku",
+    "gross": "Brutto",
+    "net": "Netto",
+    "thisWeekInterval": "W tym tygodniu",
+    "weeklyInterval": "Tygodnik",
+    "lastWeekInterval": "Ostatni tydzień",
+    "thisMonthInterval": "W tym miesiącu",
+    "mothlyInterval": "Miesięcznie",
+    "lastMonthInterval": "Ostatni miesiąc",
+    "yearlyInterval": "Rocznie",
+    "customInterval": "Niestandardowe",
+    "chooseStartDate": "Wybierz datę rozpoczęcia",
+    "chooseEndDate": "Wybierz datę zakończenia",
+    "orderTotalProductsCount": "Całkowita liczba produktów"
 }
