--- a/packages/admin-dashboard/src/locales/pl/table.json
+++ b/packages/admin-dashboard/src/locales/pl/table.json
@@ -1,111 +1,117 @@
 {
-  "types": {
-    "filter": "Filter type",
-    "select": "Select type"
-  },
-  "withSelected": "With {{amount}} selected",
-  "clearSelected": "Clear selected",
-  "true": "True",
-  "false": "False",
-  "from": "From",
-  "to": "To",
-  "value": "Value",
-  "create": "Create",
-  "bulk": {
-    "delete": {
-      "title": "Are you sure you want to delete this records?",
-      "description": "This action cannot be undone."
+    "types": {
+        "filter": "Typ filtra",
+        "select": "Wybierz typ"
+    },
+    "withSelected": "Po wybraniu {{amount}}",
+    "clearSelected": "Usuń zaznaczenie",
+    "removeSelected": "Usuń zaznaczone",
+    "true": "Prawda",
+    "false": "Fałsz",
+    "from": "Od",
+    "to": "Do",
+    "value": "Wartość",
+    "create": "Utwórz",
+    "bulk": {
+        "delete": {
+            "title": "Czy na pewno chcesz usunąć te rekordy?",
+            "description": "Tej czynności nie można cofnąć.",
+            "cancel": "Anuluj",
+            "confirm": "Usuń {{amount}} rekordów"
+        }
+    },
+    "filterLabels": {
+        "active": "Aktywny",
+        "additionalInformation": "Dodatkowe informacje",
+        "code": "Kod",
+        "createdAt": "Utworzony w",
+        "currencyCode": "Kod waluty",
+        "customerLastName": "Nazwisko klienta",
+        "id": "Id",
+        "orderPlacedAt": "Zamówienie złożone pod adresem",
+        "shipping": "Wysyłka",
+        "shippingWithTax": "Wysyłka z podatkiem",
+        "state": "Stan",
+        "subTotal": "Suma cząstkowa",
+        "subTotalWithTax": "Suma częściowa z podatkiem",
+        "token": "Token",
+        "total": "suma",
+        "totalQuantity": "Całkowita ilość",
+        "totalWithTax": "Razem z podatkiem",
+        "transactionId": "Identyfikator transakcji",
+        "type": "Typ",
+        "updatedAt": "Zaktualizowano o",
+        "aggregateOrderId": "Zagregowany identyfikator zamówienia",
+        "getProforma": "Pobierz proformę",
+        "registeredOnCheckout": "Zarejestrowany przy kasie",
+        "enabled": "Włączone",
+        "name": "Nazwa",
+        "firstName": "Imię",
+        "phoneNumber": "Numer telefonu",
+        "emailAddress": "Adres e-mail",
+        "slug": "Ślimak",
+        "description": "Opis",
+        "isPrivate": "Jest prywatny",
+        "inheritFilters": "Dziedziczenie filtrów",
+        "position": "Pozycja",
+        "parentId": "Identyfikator rodzica",
+        "usedForProductCreations": "Jest używany do tworzenia produktów",
+        "usedForColors": "Jest używany dla kolorów",
+        "colorsCollection": "Jest kolekcją kolorów",
+        "zone": "Strefa",
+        "value": "Stawka",
+        "customerGroup": "Grupa klientów",
+        "category": "Kategoria",
+        "modalTitle": "Tytuł modalny",
+        "_and": "oraz",
+        "_or": "lub"
+    },
+    "buttons": {
+        "add": "Dodaj",
+        "apply": "Zastosuj",
+        "create": "Utwórz",
+        "reset": "Reset",
+        "cancel": "Anuluj"
+    },
+    "operators": {
+        "eq": "Równa się",
+        "in": "W",
+        "notIn": "Nie w",
+        "isNull": "Is null",
+        "notEq": "Nie jest równa",
+        "contains": "Zawiera",
+        "notContains": "Nie zawiera",
+        "before": "Przed",
+        "regex": "Pasuje do wyrażenia regularnego",
+        "after": "Po",
+        "between": "Pomiędzy",
+        "lt": "Niższy niż",
+        "lte": "Niższy lub równy",
+        "gt": "Większy niż",
+        "gte": "Większy lub równy"
+    },
+    "placeholders": {
+        "columnsDropdown": "Wybierz kolumny",
+        "operatorInput": "Wartość wejściowa",
+        "search": "Wyszukiwanie w {{entity}} przez {{fields}}"
+    },
+    "columns": {
+        "id": "ID",
+        "createdAt": "Utworzono w",
+        "updatedAt": "Zaktualizowano w",
+        "featuredAsset": "Aktywa",
+        "name": "Nazwa",
+        "slug": "Ślimak",
+        "enabled": "Włączony",
+        "sku": "SKU",
+        "price": "Cena",
+        "priceWithTax": "Cena z podatkiem"
+    },
+    "actionsMenu": {
+        "title": "Działania",
+        "open": "Otwarte",
+        "copyId": "Kopiuj ID",
+        "view": "Widok",
+        "delete": "Usuń"
     }
-  },
-  "filterLabels": {
-    "active": "Active",
-    "additionalInformation": "Additional information",
-    "code": "Code",
-    "createdAt": "Created at",
-    "currencyCode": "Currency code",
-    "customerLastName": "Customer last name",
-    "id": "Id",
-    "orderPlacedAt": "Order placed at",
-    "shipping": "Shipping",
-    "shippingWithTax": "Shipping with tax",
-    "state": "State",
-    "subTotal": "Sub total",
-    "subTotalWithTax": "Sub total with tax",
-    "token": "Token",
-    "total": "total",
-    "totalQuantity": "Total quantity",
-    "totalWithTax": "Total with tax",
-    "transactionId": "Transaction id",
-    "type": "Type",
-    "updatedAt": "Updated at",
-    "aggregateOrderId": "Aggregate order id",
-    "getProforma": "Get proforma",
-    "registeredOnCheckout": "Registered on checkout",
-    "enabled": "Enabled",
-    "name": "Name",
-    "firstName": "First name",
-    "phoneNumber": "Numer telefonu",
-    "emailAddress": "Email address",
-    "slug": "Slug",
-    "description": "Description",
-    "isPrivate": "Is private",
-    "inheritFilters": "Inherit filters",
-    "position": "Position",
-    "parentId": "Parent id",
-    "usedForProductCreations": "Is used for product creations",
-    "usedForColors": "Is used for colors",
-    "colorsCollection": "Is colors collection",
-    "zone": "Zone",
-    "value": "Rate",
-    "customerGroup": "Customer group",
-    "category": "Category",
-    "modalTitle": "Modal title",
-    "_and": "and",
-    "_or": "or"
-  },
-  "buttons": {
-    "add": "Add",
-    "apply": "Apply",
-    "create": "Create",
-    "reset": "Reset",
-    "cancel": "Cancel"
-  },
-  "operators": {
-    "eq": "Equals",
-    "in": "In",
-    "notIn": "Not in",
-    "isNull": "Is null",
-    "notEq": "Not equal",
-    "contains": "Contains",
-    "notContains": "Not contains",
-    "before": "Before",
-    "regex": "Matches regex",
-    "after": "After",
-    "between": "Between",
-    "lt": "Lower than",
-    "lte": "Lower than or equal",
-    "gt": "Greater than",
-    "gte": "Greater than or equal"
-  },
-  "placeholders": {
-    "columnsDropdown": "Select columns",
-    "operatorInput": "Input value",
-    "search": "Search for..."
-  },
-  "columns": {
-    "id": "ID",
-    "createdAt": "Created at",
-    "updatedAt": "Updated at",
-    "featuredAsset": "Featured asset",
-    "name": "Name",
-    "slug": "Slug",
-    "enabled": "Enabled"
-  },
-  "actionsMenu": {
-    "title": "Actions",
-    "open": "Open",
-    "copyId": "Copy ID",
-    "view": "View",
-    "delete": "Delete"
-  }
 }
