--- a/packages/admin-dashboard/src/locales/pl/collections.json
+++ b/packages/admin-dashboard/src/locales/pl/collections.json
@@ -1,141 +1,141 @@
 {
-  "create": "Utwórz kolekcję",
-  "edit": "Edytuj kolekcję",
-  "baseInfoCode": "Kod: {{value}}",
-  "baseInfoId": "Id: {{value}}",
-  "baseInfoCreated": "Stworzony: {{value}}",
-  "baseInfoUpdated": "Aktualizacja: {{value}}",
-  "table": {
-    "id": "Id",
-    "name": "Nazwa",
-    "isPrivate": "Prywatny",
-    "subCollections": "Kolekcje",
-    "createdAt": "Utworzono na stronie",
-    "updatedAt": "Zaktualizowano na stronie",
-    "columns": "Kolumny",
-    "featuredAsset": "Obraz",
-    "breadcrumb": "Breadcrumb",
-    "slug": "Ślimak",
-    "children": "# Liczba dzieci",
-    "collections": "W kolekcjach",
-    "actions": "Działania",
-    "copyId": "Skopiuj identyfikator produktu",
-    "products": "# Liczba produktów",
-    "delete": "Usuń kolekcję"
-  },
-  "details": {
-    "basic": {
-      "title": "Podstawowe informacje",
-      "name": "Nazwa",
-      "slug": "Ślimak",
-      "isPrivate": "Jest prywatny",
-      "description": "Opis"
-    },
-    "filters": {
-      "title": "Filtry",
-      "inherit": "Dziedzicz filtry",
-      "condition": "Stan",
-      "addCondition": "Dodaj warunek",
-      "addFacets": "Dodaj wartości aspektów"
-    },
-    "contents": {
-      "title": "Produkty"
-    }
-  },
-  "visibility": {
-    "public": "Publiczny",
-    "private": "Prywatny"
-  },
-  "toasts": {
-    "collectionLoadingError": "Nie udało się załadować kolekcji o id {{value}}.",
-    "collectionUpdateSuccess": "Kolekcja została pomyślnie zaktualizowana",
-    "collectionUpdateError": "Wystąpił błąd: ",
-    "collectionCreatedSuccess": "Kolekcja została utworzona pomyślnie",
-    "collectionCreatedError": "Nie udało się utworzyć kolekcji",
-    "collectionDeleteSuccess": "Kolekcja została pomyślnie usunięta",
-    "collectionDeleteError": "Nie udało się usunąć kolekcji",
-    "deletionCollectionErrorToast": "Nie udało się usunąć kolekcji",
-    "deletionCollectionSuccessToast": "Kolekcje zostały pomyślnie usunięte",
-    "noCollectionChildrens": "{{kolekcja}} kolekcja nie ma żadnych dzieci"
-  },
-  "deleteCollection": {
-    "title": "Usuń kolekcję",
-    "description": "Czy na pewno chcesz usunąć tę kolekcję?",
-    "successMessage": "Kolekcja została usunięta.",
-    "deleteOrCancel": "Usuń/Anuluj wybrane"
-  },
-  "editCollection": "Edytuj kolekcję",
-  "withSelected": "Po wybraniu {{kolekcje}}",
-  "columns": "Kolumny",
-  "rowsSelected": "{{wybrane}} z {{wszystkie}} wybranych wierszy",
-  "duplicateCollection": "Zdecydowanie chcesz powielić te kolekcje?",
-  "collectionActions": {
-    "move": "Przesuń",
-    "copy": "Duplikat",
-    "assign": "Przypisz do kanału",
-    "deleteFromChannel": "Usuń z bieżącego kanału"
-  },
-  "drawer": {
-    "close": "Zamknij",
-    "title": "{{collectionName}} kolekcja",
-    "count": "{{count}} produktów",
-    "product": "Produkt",
-    "variant": "Wariant",
-    "sku": "SKU",
-    "filter": {
-      "title": "Filtruj...",
-      "name": "Według nazwy wariantu",
-      "sku": "Przez SKU",
-      "id": "Przez Id",
-      "labels": {
-        "name": "Nazwa wariantu",
-        "sku": "SKU",
-        "id": "Id"
-      }
-    }
-  },
-  "deleteCollectionDialog": {
-    "button": "Usuń kolekcję",
-    "title": "Jesteś pewien?",
-    "description": "Kolekcja zostanie trwale usunięta.",
-    "confirm": "Usuń kolekcję",
-    "cancel": "Anuluj"
-  },
-  "deleteCollectionsFromChannel": {
-    "areYouSure": "Czy na pewno chcesz usunąć te kolekcje z {{ channel }}? ?",
-    "removeCollection": "Usuń kolekcję",
-    "cancel": "Anuluj",
-    "removeSuccess": "Usunięte kolekcje",
-    "removeError": "Nie można usunąć kolekcji z kanału"
-  },
-  "moveCollectionsToChannels": {
-    "moveCollections": "Przenieś kolekcje",
-    "move": "Przesuń",
-    "selected": "Wybrane",
-    "availableChannels": "Dostępne kanały",
-    "searchByCode": "Szukaj według kodu...",
-    "searchByToken": "Szukaj według tokena...",
+    "create": "Utwórz kolekcję",
+    "edit": "Edycja kolekcji",
+    "baseInfoCode": "Kod: {{value}}",
+    "baseInfoId": "Id: {{value}}",
+    "baseInfoCreated": "Utworzono: {{value}}",
+    "baseInfoUpdated": "Zaktualizowano: {{value}}",
     "table": {
-      "token": "Token",
-      "code": "Kod",
-      "active": "Aktywny"
+        "id": "Id",
+        "name": "Nazwa",
+        "isPrivate": "Prywatny",
+        "subCollections": "Kolekcje",
+        "createdAt": "Utworzono w",
+        "updatedAt": "Zaktualizowano w",
+        "columns": "Kolumny",
+        "featuredAsset": "Obraz",
+        "breadcrumb": "Breadcrumb",
+        "slug": "Ślimak",
+        "children": "# Liczba dzieci",
+        "collections": "W kolekcjach",
+        "actions": "Działania",
+        "copyId": "Kopiowanie identyfikatora produktu",
+        "products": "# produktów",
+        "delete": "Usuń kolekcję"
     },
-    "movedAllCollections": "Przeniesiono wszystkie kolekcje",
-    "movedPartOfCollections": "Przeniesiono część kolekcji",
-    "moveError": "Nie mogłeś przenieść kolekcji"
-  },
-  "moveCollectionsToCollections": {
-    "targetCollection": "Kolekcja docelowa",
-    "searchByName": "Szukaj według nazwy...",
-    "move": "Przesuń",
-    "selected": "Wybrane",
-    "moveCollections": "Przenieś kolekcje",
-    "movedAllCollections": "Przeniesiono wszystkie kolekcje",
-    "movedPartOfCollections": "Przeniesiono część kolekcji",
-    "moveError": "Nie mogłeś przenieść kolekcji"
-  },
-  "errors": {
-    "generic": "Coś było nie tak",
-    "couldntMoveCollection": "Nie mogłem przenieść kolekcji"
-  }
+    "details": {
+        "basic": {
+            "title": "Podstawowe informacje",
+            "name": "Nazwa",
+            "slug": "Ślimak",
+            "isPrivate": "Jest prywatny",
+            "description": "Opis"
+        },
+        "filters": {
+            "title": "Filtry",
+            "inherit": "Dziedziczenie filtrów",
+            "condition": "Warunek",
+            "addCondition": "Dodaj warunek",
+            "addFacets": "Dodawanie wartości aspektów"
+        },
+        "contents": {
+            "title": "Zawartość"
+        }
+    },
+    "visibility": {
+        "public": "Publiczny",
+        "private": "Prywatny"
+    },
+    "toasts": {
+        "collectionLoadingError": "Nie udało się załadować kolekcji o id {{value}}",
+        "collectionUpdateSuccess": "Kolekcja została pomyślnie zaktualizowana",
+        "collectionUpdateError": "Wystąpił błąd:",
+        "collectionCreatedSuccess": "Kolekcja została utworzona pomyślnie",
+        "collectionCreatedError": "Nie udało się utworzyć kolekcji",
+        "collectionDeleteSuccess": "Kolekcja została pomyślnie usunięta",
+        "collectionDeleteError": "Nie udało się usunąć kolekcji",
+        "deletionCollectionErrorToast": "Nie udało się usunąć kolekcji",
+        "deletionCollectionSuccessToast": "Kolekcje zostały pomyślnie usunięte",
+        "noCollectionChildrens": "kolekcja {{collection}} nie ma żadnych dzieci"
+    },
+    "deleteCollection": {
+        "title": "Usuń kolekcję",
+        "description": "Czy na pewno chcesz usunąć tę kolekcję?",
+        "successMessage": "Kolekcja została usunięta.",
+        "deleteOrCancel": "Usuń/Anuluj wybrane"
+    },
+    "editCollection": "Edytuj kolekcję",
+    "withSelected": "Z wybranym {{collections}}",
+    "columns": "Kolumny",
+    "rowsSelected": "{{selected}} z {{all}} wybranych wierszy",
+    "duplicateCollection": "Na pewno chcesz zduplikować te kolekcje?",
+    "collectionActions": {
+        "move": "Przeprowadzka",
+        "copy": "Duplikat",
+        "assign": "Przypisz do kanału",
+        "deleteFromChannel": "Usuń z bieżącego kanału"
+    },
+    "drawer": {
+        "close": "Zamknij",
+        "title": "kolekcja {{collectionName}}",
+        "count": "{{count}} produkty",
+        "product": "Produkt",
+        "variant": "Wariant",
+        "sku": "SKU",
+        "filter": {
+            "title": "Filtr...",
+            "name": "Według nazwy wariantu",
+            "sku": "Według SKU",
+            "id": "Według Id",
+            "labels": {
+                "name": "Nazwa wariantu",
+                "sku": "SKU",
+                "id": "Id"
+            }
+        }
+    },
+    "deleteCollectionDialog": {
+        "button": "Usuń kolekcję",
+        "title": "Czy na pewno?",
+        "description": "Kolekcja zostanie trwale usunięta.",
+        "confirm": "Usuń kolekcję",
+        "cancel": "Anuluj"
+    },
+    "deleteCollectionsFromChannel": {
+        "areYouSure": "Czy na pewno chcesz usunąć te kolekcje z {{ channel }} ?",
+        "removeCollection": "Usuń kolekcję",
+        "cancel": "Anuluj",
+        "removeSuccess": "Kolekcje usunięte",
+        "removeError": "Nie można usunąć kolekcji z kanału"
+    },
+    "moveCollectionsToChannels": {
+        "moveCollections": "Przenieś kolekcje",
+        "move": "Przenieś",
+        "selected": "Wybrany",
+        "availableChannels": "Dostępne kanały",
+        "searchByCode": "Szukaj według kodu",
+        "searchByToken": "Szukaj według tokena...",
+        "table": {
+            "token": "Token",
+            "code": "Kod",
+            "active": "Aktywny"
+        },
+        "movedAllCollections": "Przeniesiono wszystkie kolekcje",
+        "movedPartOfCollections": "Przeniesiono część kolekcji",
+        "moveError": "Nie można przenieść kolekcji"
+    },
+    "moveCollectionsToCollections": {
+        "targetCollection": "Kolekcja docelowa",
+        "searchByName": "Wyszukiwanie według nazwy...",
+        "move": "Przenieś",
+        "selected": "Wybrany",
+        "moveCollections": "Przenoszenie kolekcji",
+        "movedAllCollections": "Przeniesiono wszystkie kolekcje",
+        "movedPartOfCollections": "Przeniesiono część kolekcji",
+        "moveError": "Nie można przenieść kolekcji"
+    },
+    "errors": {
+        "generic": "Coś było nie tak",
+        "couldntMoveCollection": "Nie mogłem przenieść kolekcji"
+    }
 }
