--- a/packages/admin-dashboard/src/locales/pl/customers.json
+++ b/packages/admin-dashboard/src/locales/pl/customers.json
@@ -4,23 +4,25 @@
         "title": "Tytuł",
         "firstName": "Imię",
         "lastName": "Nazwisko",
-        "emailAddress": "Adres email",
+        "emailAddress": "Adres e-mail",
         "phoneNumber": "Numer telefonu"
     },
     "verified": {
-        "header": "Role klienta",
+        "header": "Role klientów",
         "true": "Zweryfikowany",
         "false": "Gość"
     },
     "customerGroups": {
         "header": "Grupy klientów",
-        "placeholder": "Dodaj grupy",
+        "placeholder": "Dodawanie grup",
         "toastAdded": "Użytkownik został dodany do grupy",
-        "toastRemoved": "Użytkownik został usunięty z grupy"
+        "toastRemoved": "Użytkownik został usunięty z grupy",
+        "createCustomerFirst": "Po utworzeniu klienta będziesz mógł dodać go do różnych grup klientów tutaj"
     },
     "addresses": {
         "header": "Adresy",
-        "empty": "Wygląda na to, że nie ma jeszcze żadnych adresów.",
+        "empty": "Wygląda na to, że nie ma jeszcze adresów.",
+        "createCustomerFirst": "Po utworzeniu klienta będziesz mógł dodać jego pierwszy adres tutaj.",
         "addBtn": "Dodaj adres",
         "phoneNumberShort": "tel.{{value}}",
         "edit": "Edytuj",
@@ -33,44 +35,53 @@
     "history": {
         "header": "Historia",
         "toastError": "Wystąpił błąd",
-        "toastSuccess": "Działanie zakończone sukcesem"
+        "toastSuccess": "Akcja zakończona pomyślnie"
     },
     "selectAddress": {
-        "nameRequired": "Imię i nazwisko jest wymagane",
-        "streetRequired": "Linia ulicy 1 jest wymagana",
+        "nameRequired": "Pełna nazwa jest wymagana",
+        "streetRequired": "Ulica Linia 1 jest wymagana",
         "cityRequired": "Nazwa miasta jest wymagana",
         "postalCodeRequired": "Kod pocztowy jest wymagany",
         "countryRequired": "Kraj jest wymagany",
         "phoneNumberRequired": "Numer telefonu jest wymagany",
         "shippingHeader": "Adres wysyłki",
         "billingHeader": "Adres rozliczeniowy",
-        "shippingDescription": "Tutaj możesz ustawić adres wysyłki",
-        "billingDescription": "Tutaj możesz ustawić adres rozliczeniowy",
+        "shippingDescription": "Tutaj można ustawić adres wysyłki",
+        "billingDescription": "Tutaj można ustawić adres rozliczeniowy",
         "changeShippingAddress": "Zmień adres wysyłki",
         "selectShippingAddress": "Wybierz adres wysyłki",
         "createShippingAddress": "Utwórz adres wysyłki",
-        "changeBillingAddress": "Zmień adres rozliczeniowy",
+        "changeBillingAddress": "Zmiana adresu rozliczeniowego",
         "selectBillingAddress": "Wybierz adres rozliczeniowy",
         "createBillingAddress": "Utwórz adres rozliczeniowy",
         "selectAddress": "Wybierz adres",
         "createAddress": "Utwórz adres",
         "editAddress": "Edytuj adres",
-        "addressSuccessCreateToast": "Adres wybrany pomyślnie",
-        "addressSuccessSelectToast": "Adres utworzony pomyślnie",
+        "deleteAddress": "Usuń adres",
+        "more": "Więcej",
+        "addressSuccessUpdateToast": "Adres został pomyślnie zaktualizowany",
+        "addressSuccessCreateToast": "Adres utworzony pomyślnie",
+        "addressSuccessDeleteToast": "Adres został pomyślnie usunięty",
+        "addressSuccessSetAsDefaultBillingToast": "Pomyślnie ustawiono adres jako domyślny adres rozliczeniowy",
+        "addressSuccessSetAsDefaultShippingToast": "Pomyślne ustawienie adresu jako domyślnego adresu wysyłki",
         "addressFailedCreateToast": "Wybór adresu nie powiódł się",
-        "addressFailedSelectToast": "Tworzenie adresu nie powiodło się",
+        "addressFailedUpdateToast": "Tworzenie adresu nie powiodło się",
+        "addressFailedDeleteToast": "Usunięcie adresu nie powiodło się",
+        "addressFailedSetAsDefaultToast": "Ustawienie adresu jako domyślnego nie powiodło się",
         "newAddress": "Nowy adres: {{address}} dodany do konta użytkownika",
         "addressAddFailed": "Nie udało się dodać nowego adresu do konta użytkownika",
         "phoneError": "Nieprawidłowy format numeru telefonu",
         "close": "Zamknij",
         "setAsDefaultShipping": "Ustaw jako domyślny adres wysyłki",
         "setAsDefaultBilling": "Ustaw jako domyślny adres rozliczeniowy",
-        "countrySelectLabel": "Kraj:",
+        "countrySelectLabel": " Kraj:",
         "phoneNumberShort": "tel.{{value}}",
+        "defaultBilling": "Domyślny adres rozliczeniowy",
+        "defaultShipping": "Domyślny adres wysyłki",
         "isDefaultBilling": "Domyślny adres wysyłki klienta",
         "isDefaultShipping": "Domyślny adres rozliczeniowy klienta",
         "createForCustomer": "Utwórz dla klienta",
-        "inputNameLabel": "Imię i nazwisko",
+        "inputNameLabel": "Pełna nazwa",
         "inputNamePlaceholder": "Imię i nazwisko",
         "inputCompanyLabel": "Nazwa firmy",
         "inputCompanyPlaceholder": "Nazwa firmy",
@@ -78,15 +89,15 @@
         "inputPhonePlaceholder": "Numer telefonu",
         "inputPostalLabel": "Kod pocztowy",
         "inputPostalPlaceholder": "Kod pocztowy",
-        "inputProvinceLabel": "Województwo",
-        "inputProvincePlaceholder": "Województwo",
+        "inputProvinceLabel": "Prowincja",
+        "inputProvincePlaceholder": "Prowincja",
         "inputCityLabel": "Miasto",
         "inputCityPlaceholder": "Miasto",
-        "inputStreetLabel": "Linia ulicy 1",
-        "inputStreetPlaceholder": "Linia ulicy 1",
-        "inputStreet2Label": "Linia ulicy 2",
-        "inputStreet2Placeholder": "Linia ulicy 2",
-        "inputTaxLabel": "NIP firmy",
-        "inputTaxPlaceholder": "NIP firmy"
+        "inputStreetLabel": "Ulica Linia 1",
+        "inputStreetPlaceholder": "Street Line 1",
+        "inputStreet2Label": "Ulica Linia 2",
+        "inputStreet2Placeholder": "Street Line 2",
+        "inputTaxLabel": "Identyfikator podatkowy firmy",
+        "inputTaxPlaceholder": "Identyfikator podatkowy firmy"
     }
 }
