--- a/packages/admin-dashboard/src/locales/pl/roles.json
+++ b/packages/admin-dashboard/src/locales/pl/roles.json
@@ -1,54 +1,52 @@
 {
-  "create": "Utwórz rolę",
-  "edit": "Edytuj rolę",
-  "baseInfoCode": "Kod: {{value}}",
-  "baseInfoId": "Id: {{value}}",
-  "baseInfoCreated": "Stworzony: {{value}}",
-  "baseInfoUpdated": "Aktualizacja: {{value}}",
-  "defaultChannel": "Domyślny kanał",
-  "table": {
-    "id": "Id",
-    "name": "Nazwa",
-    "description": "Opis",
-    "code": "Kod",
-    "permissions": "Uprawnienia",
-    "channels": "Kanały",
-    "createdAt": "Utworzono na stronie",
-    "updatedAt": "Zaktualizowano na stronie",
-    "openMenu": "Otwórz menu",
-    "copyId": "Kopiuj identyfikator",
-    "viewRole": "Zobacz rolę",
-    "columns": "Kolumny",
-    "defaultRoleInfo": "To jest domyślna rola i nie może być edytowana"
-  },
-  "details": {
-    "basic": {
-      "title": "Podstawowe informacje",
-      "description": "Nazwa",
-      "code": "Kod",
-      "channels": "Kanały",
-      "channelsPlaceholder": "Dodaj kanał"
+    "create": "Utwórz rolę",
+    "edit": "Edytuj rolę",
+    "baseInfoCode": "Kod: {{value}}",
+    "baseInfoId": "Id: {{value}}",
+    "baseInfoCreated": "Utworzono: {{value}}",
+    "baseInfoUpdated": "Zaktualizowano: {{value}}",
+    "defaultChannel": "Domyślny kanał",
+    "table": {
+        "id": "Id",
+        "name": "Nazwa",
+        "description": "Opis",
+        "code": "Kod",
+        "permissions": "Uprawnienia",
+        "channels": "Kanały",
+        "createdAt": "Utworzono w",
+        "updatedAt": "Zaktualizowano w",
+        "openMenu": "Otwórz menu",
+        "copyId": "Kopiuj identyfikator",
+        "viewRole": "Wyświetl rolę",
+        "columns": "Kolumny",
+        "defaultRoleInfo": "Jest to domyślna rola i nie można jej modyfikować"
     },
-    "roles": {
-      "title": "Uprawnienia"
-    }
-  },
-  "toasts": {
-    "roleLoadingError": "Nie udało się załadować roli o id {{value}}.",
-    "roleUpdateSuccess": "Rola została pomyślnie zaktualizowana",
-    "roleUpdateError": "Wystąpił błąd: ",
-    "roleCreatedSuccess": "Rola została utworzona pomyślnie",
-    "roleCreatedError": "Nie udało się utworzyć roli",
-    "roleDeleteSuccess": "Rola usunięta pomyślnie",
-    "roleDeleteError": "Nie udało się usunąć roli"
-  },
-  "deleteRole": {
-    "title": "Usuń rolę",
-    "description": "Czy na pewno chcesz usunąć tę rolę?",
-    "successMessage": "Rola została usunięta.",
-    "deleteOrCancel": "Usuń/Anuluj wybrane",
-    "confirm": "Usuń",
-    "cancel": "Anuluj"
-  },
-  "selectedValue": "{{from}} z {{to}} wybranych wierszy"
+    "details": {
+        "basic": {
+            "title": "Podstawowe informacje",
+            "description": "Nazwa",
+            "code": "Kod",
+            "channels": "Kanały",
+            "channelsPlaceholder": "Dodaj kanał"
+        },
+        "permissions": {
+            "title": "Uprawnienia"
+        }
+    },
+    "toasts": {
+        "roleLoadingError": "Nie udało się załadować roli o identyfikatorze {{value}}",
+        "roleUpdateSuccess": "Rola została pomyślnie zaktualizowana",
+        "roleUpdateError": "Wystąpił błąd:",
+        "roleCreatedSuccess": "Rola została utworzona pomyślnie",
+        "roleCreatedError": "Nie udało się utworzyć roli",
+        "roleDeleteSuccess": "Rola została pomyślnie usunięta",
+        "roleDeleteError": "Nie udało się usunąć roli"
+    },
+    "deleteRole": {
+        "title": "Usuń rolę",
+        "description": "Czy na pewno chcesz usunąć tę rolę?",
+        "successMessage": "Rola została usunięta.",
+        "deleteOrCancel": "Usuń/Anuluj zaznaczone"
+    },
+    "selectedValue": "wybrano {{from}} z {{to}} wierszy"
 }
